# EmbeLinux

./: .directory  .gitignore  AUTHORS  ChangeLog  HACKING  HeightAvailability.cpp  HeightAvailability.pro  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  aclocal.m4  config.h.in  configure  configure.ac
headers/: Makefile.am  matX.h
lib/: Makefile.am  libmatX.pc.in  matX.cc
po/: es.po  fr.po
src/: Makefile.am  Makefile.in  hello-world.c  hello_world_i18n.h  main.c
